# slcmesh-mqtt

./: .env.example  .env.mqtt-bridge  .env.observer-matrix.example  .gitignore  BUILD_CUSTOM_OBSERVER.md  CUSTOMIZATION_SUMMARY.md  Caddyfile  Caddyfile.dev  OBSERVER_SETUP.md  PLAN-mosquitto-split.md  PLAN-prod-wsmqtt.md  README.md  config.json  deploy-broker.sh  deploy-compose.sh  deploy.sh  dev-config.json  dev-map.js  dev-theme.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
dev-landing/: 00-chicagoland.env  00-chicagoland.toml  00-chicagooffline.toml  00-slcland.toml  buy.html  chicagooffline.env  contributors.html  index.html  install-observer.sh  setup.html
dev-public/: audio-retro-modem.js  dev-customizations.css  dev-customizations.js  dev-map.js  index.html
docs/: COMPOSE_MIGRATION.md  architecture.md
keygen/: index.html  noble-ed25519-offline-simple.js
keygen/instructions/: index.html
keygen/js/: fallback-keygen.js
keygen/wasm/: Cargo.toml  build.sh  worker.js
keygen/wasm/pkg/: meshcore_keygen.js  meshcore_keygen_bg.wasm
keygen/wasm/src/: lib.rs
landing/: buy.html  contributors.html  index.html  setup.html
meshcore-mqtt-broker/: .env.example  Dockerfile
mosquitto/: mosquitto.conf
mqtt-bridge/: Dockerfile  bridge.js  package.json
observer-matrix/: Dockerfile  package-lock.json  package.json  server.js
observer-matrix/public/: index.html
scripts/: install-observer.sh  validate-dns.sh
